# peerpedia-core

./: .coverage  .gitignore  CLAUDE.md  DIAGNOSTIC.md  README.md  TEST_PLAN.md  TODOS.md  coverage.json  findings.json  peerpedia-ai-snapshot.md  pyproject.toml  seed.py
.github/workflows/: test.yml
.superpowers/sdd/: progress.md  task-1-brief.md  task-2-brief.md  task-3-brief.md  task-4-brief.md
demo/: sync-demo.sh
docs/: app_cli_refactor.md  architecture-audit-2026-06-28.md  architecture.md  cli-ai-first-audit.md  cli-as-ai-tool.md  cli-refactor-notes.md  cli-self-bootstrapping.md  cli-ux-improvements.md  cli-ux-issues-report.md  code-aesthetics.md  code-review-systemic-issues.md  design-review-report.md  fork-design-gap-report.md  git-db-consistency-gaps.md  layer-audit.md  new-user-cli-test-report.md  product-vision.md  repl-design.md  reputation-v2-plan.md  review-reading-order.md  social-recovery-design.md  test-coverage-report.md  user-flow-audit.md
docs/notes/: cft-algebro-geometric-foundations-v2.md  cft-algebro-geometric-foundations.md  primes-as-thermometer.md
peerpedia_core/: __main__.py  cli.py  commands.py  compiler.py  crypto.py  editor.py  exceptions.py  frontmatter.py  messages.py  names.py  repl.py  time.py
peerpedia_core/app/: __init__.py  context.py  parsers.py  refs.py  result.py
peerpedia_core/bundle/: __init__.py  ancestor.py  client.py  git_bundle.py  monotonic.py  pending.py  server.py
peerpedia_core/cli/: __init__.py  bundle_utils.py  decorators.py  dispatch.py  display.py  handler.py  helpers.py  info.py  msgs.py  output.py  parser.py  resolve.py  schema_build.py  session.py  sync_utils.py
peerpedia_core/commands/: __init__.py  articles.py  bookmarks.py  bundle.py  discover.py  guards.py  integrity.py  maintainers.py  merge.py  notifications.py  reviews.py  shares.py  sync.py  trailers.py  users.py  views.py  workflow.py
peerpedia_core/compute/: bfs.py  monotonic.py  reputation.py  sedimentation.py  state.py
peerpedia_core/config/: git.py  params.py  paths.py
peerpedia_core/core/: __init__.py  bookmarks.py  bundle.py  discover.py  guards.py  maintainers.py  merge.py  notifications.py  sync_article.py  sync_batch.py  sync_social.py  users.py  views.py
peerpedia_core/policies/: articles.py
peerpedia_core/presentation/: __init__.py
peerpedia_core/repl/: help.py  (+15 more)
tests/: conftest.py  conftest_backend.py  e2e.sh  test_account.py  test_architecture.py  test_auth_middleware.py  test_bundle.py  test_bundle_commands.py  test_cli_handlers.py  test_commands.py  test_compiler.py  test_compute.py  test_config_git.py  test_config_params_utils.py  test_crud.py  test_crud_article.py  test_crud_share.py  test_crypto.py  test_documentation.py  test_error_handler.py  test_exceptions.py  test_frontmatter.py  test_get_commit_authors.py  test_git_backend.py  test_http_transport.py  test_locks.py  test_maintainer_seed.py  test_maintainers.py  test_merge.py  test_messages.py  test_models.py  test_monotonic_search.py  test_notifications.py  test_policies.py  test_reputation.py  test_rules.py  test_sedimentation_publish.py  test_seed.py  test_server.py  test_session_utils.py  (+7 more)
(+365 files in other folders)
